--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -23,7 +23,7 @@
       <header class="c-header">
         {% include 'header' %}
       </header>
-      <nav id="nav" class="c-nav nav-collapse" role="navigation">
+      <nav class="c-nav" role="navigation">
         {% include 'nav' %}
       </nav>
       <main role="main">
