--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -6,8 +6,11 @@
 $color__darker-nav-background: scale-color($accent-color, $lightness: -15%);
 $color__dark-nav-background: scale-color($accent-color, $lightness: -10%);
 
+// Nav
 .c-nav {
 }
+
+// Hamburger button
 .c-nav__hamburger {
   position: absolute;
   top: 18px;
@@ -27,29 +30,36 @@ $color__dark-nav-background: scale-color($accent-color, $lightness: -10%);
   line-height: 0;
 }
 
+// Items
 .c-nav__items {
   display: none;
   background-color: $accent-color;
   margin-bottom: 0;
   @include media-query(desk) {
+    font-size: 0;
     display: block;
     text-align: center;
   }
 }
 .c-nav__item {
-  overflow: hidden;
   margin-bottom: 0;
   border-bottom: 1px solid $color__darker-nav-background;
   @include media-query(desk) {
-    overflow: visible;
+    font-size: 16px;
     position: relative;
     display: inline-block;
     vertical-align: top;
     border-bottom: none;
     text-align: left;
+    border-left: 1px solid $color__dark-nav-background;
+    border-right: 1px solid $color__dark-nav-background;
+    &:first-child {
+      border-left-width: 2px;
+    }
+    &:last-child {
+      border-right-width: 2px;
+    }
   }
-}
-.c-nav__item--current {
 }
 .c-nav__link {
   color: #FFFFFF;
@@ -57,45 +67,51 @@ $color__dark-nav-background: scale-color($accent-color, $lightness: -10%);
   display: block;
   font-weight: 700;
   transition: background-color .25s;
+  cursor: pointer;
   &:hover {
     background-color: $color__darker-nav-background;
-  }
-}
-.c-nav__link.has-sub-nav {
-  float: left;
-  width: 85%;
-  @include media-query(lap) {
-    width: 90%;
-  }
-  @include media-query(desk) {
-    width: auto;
   }
 }
 .c-nav__link--current {
   background-color: $color__darker-nav-background;
 }
+
+// Has sub nav
+.c-nav__link.has-sub-nav {
+  overflow: hidden;
+  @include media-query(desk) {
+    overflow: visible;
+  }
+}
+.c-nav__link-title.has-sub-nav {
+  float: left;
+  width: 85%;
+  @include media-query(hands) {
+    width: 90%;
+  }
+  @include media-query(desk) {
+    float: none;
+    width: auto;
+    margin-right: 4px;
+  }
+}
 .c-nav__link-dropdown {
   float: left;
   width: 15%;
-  padding: 12px 16px;
-  cursor: pointer;
   text-align: center;
-  border-left: 1px solid $color__dark-nav-background;
-  &:hover {
-    background-color: $color__dark-nav-background;
-  }
-  @include media-query(lap) {
+  @include media-query(hands) {
     width: 10%;
   }
   @include media-query(desk) {
+    float: none;
     width: auto;
-    border-right: 1px solid $color__dark-nav-background;
   }
 }
 .c-nav__link-dropdown-icon {
   color: #FFFFFF;
 }
 
+// Sub items
 .c-nav__sub-items {
   margin-bottom: 0;
   clear: both;
@@ -103,6 +119,7 @@ $color__dark-nav-background: scale-color($accent-color, $lightness: -10%);
   @include media-query(desk) {
     position: absolute;
     top: 48px;
+    left: 0;
     z-index: 2;
     background-color: $accent-color;
   }
@@ -123,8 +140,6 @@ $color__dark-nav-background: scale-color($accent-color, $lightness: -10%);
       border-top: none;
     }
   }
-}
-.c-nav__sub-item--current {
 }
 .c-nav__sub-link {
   color: #FFFFFF;
